--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="javaScriptFiles/myScript1.js"></script>
     <link rel="stylesheet" href="styles.css">
 	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Adam's Webpage</title>
 </head>
 <body>
-<div style="background-color:#e5e5e5;padding:15px;text-align:center;">
+<div style="background-color:#ffeecc;padding:20px;text-align:center;">
     <h1>Homepage</h1>
 </div>
 <div style="overflow:auto">
     <div class="menu">
-        <a href="#">About</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-        <a href="#">Link 4</a>
+        <a href="https://www.linkedin.com/">LinkedIn</a>
+        <a href="https://github.com/creaseaj">GitHub</a>
+        <a href="https://twitter.com/">Twitter</a>
     </div>
 
     <div class="main">
         <h2>Who am I?</h2>
         <img src="images/Adam_Profile_Photo.jpg" style="float:left;" alt="Photo of Adam">
         <p>I'm a first year computer and information security at Plymouth University. I'm currently studying web development in the Soft166 module.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-
-    <div class="right">
-        <h2>About</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+    <div class="main">
+        <h2>Javascript testing</h2>
+        <p>This section will be used to test java script because help.</p>
     </div>
 </div>
 </body>
