--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -15,6 +15,7 @@
         <a href="https://www.linkedin.com/">LinkedIn</a>
         <a href="https://github.com/creaseaj">GitHub</a>
         <a href="https://twitter.com/">Twitter</a>
+        <a href="maps.html">Maps Viewer</a>
     </div>
 
     <div class="main">
