--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -26,7 +26,8 @@
     </div>
     <div class="main">
         <h2>Javascript testing</h2>
-        <p>This section will be used to test java script because help.</p>
+        <p>This section will be used to test java script.</p>
+        <button type="button" value="click" onclick="ShowAlert()">Click Me!</button>
     </div>
 </div>
 </body>
