--- a/lightsPage.html
+++ b/lightsPage.html
@@ -4,6 +4,11 @@
     <script src="javaScriptFiles/myScript1.js"></script>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="treasure.js" defer></script>
     <title>Adam's Webpage</title>
 </head>
 <body>
@@ -13,21 +18,27 @@
 <div style="overflow:auto">
     <div class="menu">
         <a href="maps.html">Maps Viewer</a>
+        <a href="lightsPage.html">Lights</a>
         <a href="https://www.linkedin.com/">LinkedIn</a>
         <a href="https://github.com/creaseaj">GitHub</a>
         <a href="https://twitter.com/">Twitter</a>
     </div>
 
     <div class="main">
-        <h2>Who am I?</h2>
-        <img src="images/Adam_Profile_Photo.jpg" style="float:left;" alt="Photo of Adam">
-        <p>I'm a first year computer and information security at Plymouth University. I'm currently studying web development in the Soft166 module.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <div class="main">
-        <h2>Javascript testing</h2>
-        <p>This section will be used to test java script.</p>
-        <button type="button" value="click" onclick="ShowAlert()">Click Me!</button>
+        <table id="LightGrid">
+            <tr>
+                <td class="bg-light" id="1"></td>
+                <td class="bg-light" id="4"></td>
+            </tr>
+            <tr>
+                <td class="bg-light" id="2"></td>
+                <td class="bg-light" id="5"></td>
+            </tr>
+            <tr>
+                <td class="bg-light" id="3"></td>
+                <td class="bg-light" id="6"></td>
+            </tr>
+        </table>
     </div>
 </div>
 </body>
