--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -17,6 +17,7 @@
 <div style="overflow:auto">
     <div class="menu">
         <a href="maps.html">Maps Viewer</a>
+        <a href="lightsPage.html">Lights</a>
         <a href="https://www.linkedin.com/">LinkedIn</a>
         <a href="https://github.com/creaseaj">GitHub</a>
         <a href="https://twitter.com/">Twitter</a>
