--- a/maps.html
+++ b/maps.html
@@ -26,6 +26,7 @@
 <div style="overflow:auto">
     <div class="menu">
         <a href="WebpageMain.html">Home</a>
+        <a href="lightsPage.html">Lights</a>
         <a href="https://www.linkedin.com/">LinkedIn</a>
         <a href="https://github.com/creaseaj">GitHub</a>
         <a href="https://twitter.com/">Twitter</a>
