--- a/lightsPage.html
+++ b/lightsPage.html
@@ -10,7 +10,7 @@
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
             crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="treasure.js" defer></script>
+    <script src="lightsControl.js" defer></script>
     <title>Adam's Webpage</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
         <a href="https://github.com/creaseaj">GitHub</a>
         <a href="https://twitter.com/">Twitter</a>
     </div>
-
+<button type="button" onclick="turnOnAll()">Turn on all</button>
     <div class="main">
         <table id="LightGrid">
             <tr>
