--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -25,7 +25,7 @@
 
     <div class="main">
         <h2>Who am I?</h2>
-        <img src="images/Adam_Profile_Photo.jpg" style="float:left;" alt="Photo of Adam">
+        <!--<img src="images/Adam_Profile_Photo.jpg" style="float:left;" alt="Photo of Adam">-->
         <p>I'm a first year computer and information security at Plymouth University. I'm currently studying web development in the Soft166 module.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
@@ -33,6 +33,16 @@
         <h2>Javascript testing</h2>
         <p>This section will be used to test java script.</p>
         <button type="button" value="click" onclick="ShowAlert()">Click Me!</button>
+        <form onsubmit="return runCalc()">
+            Integer 1:<br>
+            <input type="text" name="int1" value="1">
+            <br>
+            Integer 2:<br>
+            <input type="text" name="int2" value="1">
+            <br><br>
+            <input type="submit" value="add">
+        </form>
+        <p>Result <span id="calcResult"></span></p>
     </div>
 </div>
 </body>
