--- a/lightsPage.html
+++ b/lightsPage.html
@@ -10,7 +10,7 @@
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
             crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="lightsControl.js" defer></script>
+    <script src="javaScriptFiles/lightsControl.js" defer></script>
     <title>Adam's Webpage</title>
 </head>
 <body>
