Password Checker page fully created, requirements shown in table and indicator whether all requirements have been met shown

--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -31,14 +31,12 @@
                 </div>
             </li>
         </ul>
-        <h4  class="" >Password Strength Checker</h4>
     </div>
-</nav>
-    </button>
+    <div style="align-content: center; text-align: center;">Hi</div>
 </nav>
 <div class="input-group" style="padding:20px"   >
     <div class="input-group-prepend">
-        <span class="input-group-text">Password</span>
+        <span class="input-group-text"><i class="material-icons" id="secIcon" style="color:red;">lock_open</i> </span>
     </div>
     <input oninput="checkPassword()" type="password" id="password" class="form-control" placeholder="Password"
            aria-label="Username" aria-describedby="basic-addon1">
@@ -56,13 +54,13 @@
         <td><p id="check3" style="color:red;"><i class="material-icons" id="checkIcon3" style="color:red;">clear</i>
             Contains Symbols</p></td>
         <td><p id="check4" style="color:red;"><i class="material-icons" id="checkIcon4" style="color:red;">
-            clear</i>Contains Upper Case Letters</p></td>
+            clear</i>Contains Upper and Lower Case Letters</p></td>
     </tr>
     <tr>
         <td><p id="check5" style="color:red;"><i class="material-icons" id="checkIcon5" style="color:red;">
             clear</i>Contains no full words</p></td>
         <td><p id="check6" style="color:red;"><i class="material-icons" id="checkIcon6" style="color:red;">
-            clear</i>Contains</p></td>
+            clear</i>Contains no common passwords</p></td>
     </tr>
     </tbody>
 </table>
