--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-gb">
 <head>
+    <script src="javaScriptFiles/rockYouOrdered.js"></script>
     <script src="javaScriptFiles/myScript1.js"></script>
 
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,8 +43,7 @@
     <div class="input-group-prepend">
         <span class="input-group-text"><i class="material-icons" id="secIcon" style="color:red;">lock_open</i></span>
     </div>
-    <input oninput="checkPassword()" type="password" id="password" class="form-control" placeholder="Password"
-           aria-label="Username" aria-describedby="basic-addon1">
+    <input oninput="checkPassword()" type="password" id="password" class="form-control" placeholder="Password">
 </div>
 <div style="padding:20px">
 <table class="table table-striped">
