About page, lights key, and main page created and using bootstrap. Bootstrap navbar has been changed to be more easily navigatable.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Index</title>
+    <title>About</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light col-lg-12">
@@ -16,30 +16,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="WebpageMain.html">Index <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link " href="WebpageMain.html">Index <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="PasswordChecker.html">Lights</a>
-            <a class="nav-item nav-link" href="about.html">About</a>
+            <a class="nav-item nav-link active" href="about.html">About</a>
             <a class="nav-item nav-link" href="lightsKey.html" >Key</a>
         </div>
     </div>
 </nav>
 <div class="container py-5">
     <div class="row">
-        <div class="col-md-4">
-            <a href="about.html" class="card mb-4 shadow" style="height: 4rem;text-decoration:none">
-                <h1 class="card-text text-center">About</h1>
-            </a>
-        </div>
-        <div class="col-md-4">
-                <a href="PasswordChecker.html" class="card mb-4 shadow" style="height: 4rem;text-decoration: none">
-                    <h1 class="card-text text-center" s>Lights</h1>
-                </a>
-        </div>
-        <div class="col-md-4">
-
-            <a href="#" class="card mb-4 shadow" style="height: 4rem ; text-decoration: none">
-                <h1 class="card-text text-center">Key</h1>
-            </a>
+        <div class="card col-md-12">
+            <h2 class="text-center">About</h2>
+            <p> This is an about page</p>
+            <p>Disclaimer: </p>
         </div>
     </div>
 </div>
