--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -13,26 +13,18 @@
     <title>Password Strength Checker</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light col-lg-12">
+    <h2 class="navbar-brand">Soft 166 Practice Submission</h2>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Index</a>
-                    <a class="dropdown-item" href="#">About</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Password Checker</a>
-                    <a class="dropdown-item" href="#">Lights Key</a>
-                </div>
-            </li>
-        </ul>
-        <h4  class="" >Password Strength Checker</h4>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link " href="WebpageMain.html">Index <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="PasswordChecker.html">Lights</a>
+            <a class="nav-item nav-link" href="about.html">About</a>
+            <a class="nav-item nav-link" href="lightsKey.html" >Key</a>
+        </div>
     </div>
 </nav>
     </button>
