--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -15,7 +15,8 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light col-lg-12">
     <h2 class="navbar-brand">Soft 166 Practice Submission</h2>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -23,7 +24,7 @@
             <a class="nav-item nav-link " href="WebpageMain.html">Index <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="PasswordChecker.html">Lights</a>
             <a class="nav-item nav-link" href="about.html">About</a>
-            <a class="nav-item nav-link" href="lightsKey.html" >Key</a>
+            <a class="nav-item nav-link" href="lightsKey.html">Key</a>
         </div>
     </div>
 </nav>
