--- a/lightsKey.html
+++ b/lightsKey.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <script src="javaScriptFiles/myScript1.js"></script>
     <script src="javaScriptFiles/rockYouOrdered.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Lights Key</title>
@@ -12,17 +12,25 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light col-lg-12">
     <h2 class="navbar-brand">Soft 166 Practice Submission</h2>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link " href="WebpageMain.html">Index <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="PasswordChecker.html">Lights</a>
-            <a class="nav-item nav-link " href="about.html">About</a>
+            <a class="nav-item nav-link" href="about.html">About</a>
             <a class="nav-item nav-link active" href="lightsKey.html" >Key</a>
         </div>
     </div>
 </nav>
+<div class="container">
+    <div class="row">
+        <div class="card col-lg-12">
+            <h3>Lights Key</h3>
+        </div>
+    </div>
+</div>
 </body>
 </html>
