Headers neatened up and bootstrap column sizing redone

--- a/about.html
+++ b/about.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="javaScriptFiles/myScript1.js"></script>
-    <script src="javaScriptFiles/rockYouOrdered.js"></script>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -17,19 +15,21 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link " href="WebpageMain.html">Index <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link " href="WebpageMain.html">Index</a>
             <a class="nav-item nav-link" href="PasswordChecker.html">Lights</a>
             <a class="nav-item nav-link active" href="about.html">About</a>
             <a class="nav-item nav-link" href="lightsKey.html" >Key</a>
         </div>
     </div>
 </nav>
-<div class="container py-5">
-    <div class="row">
-        <div class="card col-md-12">
-            <h2 class="text-center">About</h2>
-            <p> This is an about page</p>
+<div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
+    <div class="col-md-8">
+        <div class="card">
+            <div class="card-body">
+            <h2 class="card-title text-center">About</h2>
+            <p class="card-text"> This is an about page</p>
             <p>Disclaimer: </p>
+            </div>
         </div>
     </div>
 </div>
