--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -24,7 +24,8 @@
         </div>
     </div>
 </nav>
-<div class="container py-5">
+<div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
+<div class="col-md-8">
     <div class="row">
         <div class="col-md-4">
             <a href="about.html" class="card mb-4 shadow" style="height: 4rem;text-decoration:none">
@@ -43,6 +44,7 @@
             </a>
         </div>
     </div>
+</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
