--- a/lightsKey.html
+++ b/lightsKey.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <script src="javaScriptFiles/myScript1.js"></script>
-    <script src="javaScriptFiles/rockYouOrdered.js"></script>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -18,7 +15,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link " href="WebpageMain.html">Index <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link " href="WebpageMain.html">Index</a>
             <a class="nav-item nav-link" href="PasswordChecker.html">Lights</a>
             <a class="nav-item nav-link" href="about.html">About</a>
             <a class="nav-item nav-link active" href="lightsKey.html" >Key</a>
@@ -27,7 +24,7 @@
 </nav>
 <div class="container">
     <div class="row">
-        <div class="card col-lg-12">
+        <div class="card col-md-12">
             <h3>Lights Key</h3>
         </div>
     </div>
