Cards formatted in pages to be more uniform

--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -28,19 +28,27 @@
 <div class="col-md-8">
     <div class="row">
         <div class="col-md-4">
-            <a href="about.html" class="card mb-4 shadow" style="height: 4rem;text-decoration:none">
-                <h1 class="card-text text-center">About</h1>
+            <a href="about.html"  style="height: 4rem ; text-decoration: none">
+                <div class="card shadow">
+                    <h1 class="text-center" style="padding-top: 1rem">About</h1>
+                    <p class="card-text" style="padding: 1rem">A page to show more information about the web application</p>
+                </div>
             </a>
         </div>
         <div class="col-md-4">
-                <a href="PasswordChecker.html" class="card mb-4 shadow" style="height: 4rem;text-decoration: none">
-                    <h1 class="card-text text-center" s>Lights</h1>
-                </a>
+            <a href="PasswordChecker.html"  style="height: 4rem ; text-decoration: none">
+                <div class="card shadow">
+                    <h1 class="text-center" style="padding-top: 1rem">Lights</h1>
+                    <p class="card-text" style="padding: 1rem">A page to show the password checker which controls the lights.</p>
+                </div>
+            </a>
         </div>
         <div class="col-md-4">
-
-            <a href="#" class="card mb-4 shadow" style="height: 4rem ; text-decoration: none">
-                <h1 class="card-text text-center">Key</h1>
+            <a href="lightsKey.html"  style="height: 4rem ; text-decoration: none">
+                <div class="card shadow">
+                    <h1 class="text-center" style="padding-top: 1rem">Key</h1>
+                    <p class="card-text" style="padding: 1rem">A page to show the association between the password checker and the philips hue bulbs.</p>
+                </div>
             </a>
         </div>
     </div>
