--- a/about.html
+++ b/about.html
@@ -24,11 +24,20 @@
 </nav>
 <div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
     <div class="col-md-8">
-        <div class="card">
+        <div class="card shadow">
             <div class="card-body">
             <h2 class="card-title text-center">About</h2>
             <p class="card-text"> This is an about page</p>
-            <p>Disclaimer: </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row justify-content-center" style="padding-bottom: 2rem;">
+    <div class="col-md-8">
+        <div class="card shadow">
+            <div class="card-body">
+                <h2 class="card-title text-center">Disclaimer</h2>
+                <p class="card-text"> This is the disclaimer</p>
             </div>
         </div>
     </div>
