--- a/lightsKey.html
+++ b/lightsKey.html
@@ -22,10 +22,13 @@
         </div>
     </div>
 </nav>
-<div class="container">
-    <div class="row">
-        <div class="card col-md-12">
-            <h3>Lights Key</h3>
+<div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
+    <div class="col-md-8">
+        <div class="card shadow">
+            <div class="card-body">
+                <h2 class="card-title text-center">Lights Key</h2>
+                <p class="card-text"> This is a key for the lights</p>
+            </div>
         </div>
     </div>
 </div>
