--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>About</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light col-lg-12">
+<nav class="navbar navbar-expand-md navbar-light bg-light col-md-12">
     <h2 class="navbar-brand">Soft 166 Practice Submission</h2>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +18,7 @@
             <a class="nav-item nav-link " href="WebpageMain.html">Index</a>
             <a class="nav-item nav-link" href="PasswordChecker.html">Lights</a>
             <a class="nav-item nav-link active" href="about.html">About</a>
-            <a class="nav-item nav-link" href="lightsKey.html" >Key</a>
+            <a class="nav-item nav-link" href="lightsKey.html">Key</a>
         </div>
     </div>
 </nav>
@@ -27,7 +27,7 @@
         <div class="card shadow">
             <div class="card-body">
             <h2 class="card-title text-center">About</h2>
-            <p class="card-text"> This is an about page</p>
+            <p class="card-text">This is an about page</p>
             </div>
         </div>
     </div>
