Containers added to stop the horizontal scroll

--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -30,6 +30,7 @@
 </nav>
     </button>
 </nav>
+<div class="container">
     <div class="row justify-content-center">
         <div class="input-group col-md-8" style="padding-bottom: 2rem;padding-top:2rem;" >
             <div class="input-group-prepend">
