--- a/about.html
+++ b/about.html
@@ -32,12 +32,14 @@
         </div>
     </div>
 </div>
-<div class="row justify-content-center" style="padding-bottom: 2rem;">
-    <div class="col-md-8">
-        <div class="card shadow">
-            <div class="card-body">
-                <h2 class="card-title text-center">Disclaimer</h2>
-                <p class="card-text"> This is the disclaimer</p>
+<div class="container">
+    <div class="row justify-content-center" style="padding-bottom: 2rem;">
+        <div class="col-md-8">
+            <div class="card shadow">
+                <div class="card-body">
+                    <h2 class="card-title text-center">Disclaimer</h2>
+                    <p class="card-text"> This is the disclaimer</p>
+                </div>
             </div>
         </div>
     </div>
