--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="javaScriptFiles/myScript1.js"></script>
-    <script src="javaScriptFiles/rockYouOrdered.js"></script>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -24,35 +22,37 @@
         </div>
     </div>
 </nav>
-<div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
-<div class="col-md-8">
-    <div class="row">
-        <div class="col-md-4">
-            <a href="about.html"  style="height: 4rem ; text-decoration: none">
-                <div class="card shadow">
-                    <h1 class="text-center" style="padding-top: 1rem">About</h1>
-                    <p class="card-text" style="padding: 1rem">A page to show more information about the web application</p>
+<div class="container">
+    <div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="about.html"  style="height: 4rem ; text-decoration: none">
+                        <div class="card shadow">
+                            <h1 class="text-center" style="padding-top: 1rem">About</h1>
+                            <p class="card-text" style="padding: 1rem">A page to show more information about the web application</p>
+                        </div>
+                    </a>
                 </div>
-            </a>
-        </div>
-        <div class="col-md-4">
-            <a href="PasswordChecker.html"  style="height: 4rem ; text-decoration: none">
-                <div class="card shadow">
-                    <h1 class="text-center" style="padding-top: 1rem">Lights</h1>
-                    <p class="card-text" style="padding: 1rem">A page to show the password checker which controls the lights.</p>
+                <div class="col-md-4">
+                    <a href="PasswordChecker.html"  style="height: 4rem ; text-decoration: none">
+                        <div class="card shadow">
+                            <h1 class="text-center" style="padding-top: 1rem">Lights</h1>
+                            <p class="card-text" style="padding: 1rem">A page to show the password checker which controls the lights.</p>
+                        </div>
+                    </a>
                 </div>
-            </a>
-        </div>
-        <div class="col-md-4">
-            <a href="lightsKey.html"  style="height: 4rem ; text-decoration: none">
-                <div class="card shadow">
-                    <h1 class="text-center" style="padding-top: 1rem">Key</h1>
-                    <p class="card-text" style="padding: 1rem">A page to show the association between the password checker and the philips hue bulbs.</p>
+                <div class="col-md-4">
+                    <a href="lightsKey.html"  style="height: 4rem ; text-decoration: none">
+                        <div class="card shadow">
+                            <h1 class="text-center" style="padding-top: 1rem">Key</h1>
+                            <p class="card-text" style="padding: 1rem">A page to show the association between the password checker and the philips hue bulbs.</p>
+                        </div>
+                    </a>
                 </div>
-            </a>
+            </div>
         </div>
     </div>
-</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
