--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-gb">
 <head>
-    <script src="javaScriptFiles/rockYouOrdered.js"></script>
     <script src="javaScriptFiles/myScript1.js"></script>
+    <script src="javaScriptFiles/rockYouOrdered.js"></script>
+    <script src="javaScriptFiles/commonWords.js"></script>
+
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -32,16 +34,16 @@
 </nav>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="input-group col-md-8" style="padding-bottom: 2rem;padding-top:2rem;" >
-            <div class="input-group-prepend">
+        <div class="input-group col-md-12" style="padding-bottom: 2rem;padding-top:2rem;" >
+            <div class="input-group-prepend shadow">
                 <span class="input-group-text"><i class="material-icons" id="secIcon" style="color:red;">lock_open</i></span>
             </div>
-            <input oninput="checkPassword()" type="password" id="password" class="form-control" placeholder="Password">
+            <input oninput="checkPassword()" type="password" id="password" class="form-control shadow" placeholder="Password">
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-8">
-            <table class="table table-striped">
+        <div class="col-md-12">
+            <table class="table table-striped table-bordered shadow">
                 <tbody>
                 <tr>
                     <td><p id="check1" style="color:red;"><i class="material-icons" id="checkIcon1" style="color:red;">
@@ -57,7 +59,7 @@
                 </tr>
                 <tr>
                     <td><p id="check5" style="color:red;"><i class="material-icons" id="checkIcon5" style="color:red;">
-                        clear</i>Contains no full words</p></td>
+                        clear</i>Contains no common words</p></td>
                     <td><p id="check6" style="color:red;"><i class="material-icons" id="checkIcon6" style="color:red;">
                         clear</i>Is not a common password</p></td>
                 </tr>
