--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <a href="about.html"  style="height: 4rem ; text-decoration: none">
-                        <div class="card shadow">
+                        <div class="card shadow bg-light">
                             <h1 class="text-center" style="padding-top: 1rem">About</h1>
                             <p class="card-text" style="padding: 1rem">A page to show more information about the web application</p>
                         </div>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="PasswordChecker.html"  style="height: 4rem ; text-decoration: none">
-                        <div class="card shadow">
+                        <div class="card shadow bg-light">
                             <h1 class="text-center" style="padding-top: 1rem">Lights</h1>
                             <p class="card-text" style="padding: 1rem">A page to show the password checker which controls the lights.</p>
                         </div>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="lightsKey.html"  style="height: 4rem ; text-decoration: none">
-                        <div class="card shadow">
+                        <div class="card shadow bg-light">
                             <h1 class="text-center" style="padding-top: 1rem">Key</h1>
                             <p class="card-text" style="padding: 1rem">A page to show the association between the password checker and the philips hue bulbs.</p>
                         </div>
