--- a/about.html
+++ b/about.html
@@ -22,20 +22,21 @@
         </div>
     </div>
 </nav>
-<div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
-    <div class="col-md-8">
-        <div class="card shadow">
-            <div class="card-body">
-            <h2 class="card-title text-center">About</h2>
-            <p class="card-text">This is an about page</p>
+<div class="container">
+    <div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
+        <div class="col-md-12">
+            <div class="card shadow bg-light    ">
+                <div class="card-body">
+                    <h2 class="card-title text-center">About</h2>
+                    <p class="card-text">This is an about page</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container">
+
     <div class="row justify-content-center" style="padding-bottom: 2rem;">
-        <div class="col-md-8">
-            <div class="card shadow">
+        <div class="col-md-12">
+            <div class="card shadow bg-light">
                 <div class="card-body">
                     <h2 class="card-title text-center">Disclaimer</h2>
                     <p class="card-text"> This is the disclaimer</p>
