--- a/lightsKey.html
+++ b/lightsKey.html
@@ -24,8 +24,8 @@
 </nav>
 <div class="container">
     <div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
-        <div class="col-md-8">
-            <div class="card shadow">
+        <div class="col-md-12">
+            <div class="card shadow bg-light">
                 <div class="card-body">
                     <h2 class="card-title text-center">Lights Key</h2>
                     <p class="card-text"> This is a key for the lights</p>
