Readme structure and disclaimer added

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <div class="card shadow bg-light">
                 <div class="card-body">
                     <h2 class="card-title text-center">Disclaimer</h2>
-                    <p class="card-text"> This is the disclaimer</p>
+                    <p class="card-text">No responsibility is taken for the misuse of this web application. Suchas the use of the lights api script to control lights without permission or the lights being used harmfully.</p>
                 </div>
             </div>
         </div>
