--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -46,21 +46,21 @@
             <table class="table table-striped table-bordered shadow">
                 <tbody>
                 <tr>
-                    <td><p id="check1" style="color:red;"><i class="material-icons" id="checkIcon1" style="color:red;">
+                    <td><p id="check1" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon1" style="color:red;">
                         clear</i>At Least 12 Characters Long</p></td>
-                    <td><p id="check2" style="color:red;"><i class="material-icons" id="checkIcon2" style="color:red;">
+                    <td><p id="check2" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon2" style="color:red;">
                         clear</i>Contains Numbers</p></td>
                 </tr>
                 <tr>
-                    <td><p id="check3" style="color:red;"><i class="material-icons" id="checkIcon3" style="color:red;">clear</i>
+                    <td><p id="check3" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon3" style="color:red;">clear</i>
                         Contains Symbols</p></td>
-                    <td><p id="check4" style="color:red;"><i class="material-icons" id="checkIcon4" style="color:red;">
+                    <td><p id="check4" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon4" style="color:red;">
                         clear</i>Contains Upper Case Letters</p></td>
                 </tr>
                 <tr>
-                    <td><p id="check5" style="color:red;"><i class="material-icons" id="checkIcon5" style="color:red;">
+                    <td><p id="check5" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon5" style="color:red;">
                         clear</i>Contains no common words</p></td>
-                    <td><p id="check6" style="color:red;"><i class="material-icons" id="checkIcon6" style="color:red;">
+                    <td><p id="check6" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon6" style="color:red;">
                         clear</i>Is not a common password</p></td>
                 </tr>
                 </tbody>
