--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -32,9 +32,9 @@
 </nav>
     </button>
 </nav>
-<div class="container">
+<div class="mw-100 container">
     <div class="row justify-content-center">
-        <div class="input-group col-md-12" style="padding-bottom: 2rem;padding-top:2rem;" >
+        <div class="input-group col-md-8" style="padding-bottom: 2rem;padding-top:2rem;" >
             <div class="input-group-prepend shadow">
                 <span class="input-group-text"><i class="material-icons" id="secIcon" style="color:red;">lock_open</i></span>
             </div>
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-12">
+        <div class="col-md-8">
             <table class="table table-striped table-bordered shadow">
                 <tbody>
                 <tr>
