--- a/WebpageMain.html
+++ b/WebpageMain.html
@@ -22,9 +22,9 @@
         </div>
     </div>
 </nav>
-<div class="container">
+<div class="mw-100 container">
     <div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
-        <div class="col-md-12">
+        <div class="col-md-8">
             <div class="row">
                 <div class="col-md-4">
                     <a href="about.html"  style="height: 4rem ; text-decoration: none">
