--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -57,7 +57,7 @@
                             </tr>
                             <tr>
                                 <td><p id="check3" style="color:red;"><i class="material-icons" id="checkIcon3" style="color:red;">clear </i>Contains Symbols</p></td>
-                                <td><p id="check4" style="color:red;"><i class="material-icons" id="checkIcon4" style="color:red;">clear </i>Contains Upper Case Letters</p></td>
+                                <td><p id="check4" style="color:red;"><i class="material-icons" id="checkIcon4" style="color:red;">clear </i>Contains Upper and Lower Case Letters</p></td>
                             </tr>
                             <tr>
                                 <td><p id="check5" style="color:green;"><i class="material-icons" id="checkIcon5" style="color:green;">done </i>Contains no common words</p></td>
